--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-language: objective-c
-osx_image: xcode8.2.1
-
-script:
-  - xctool test -test-sdk iphonesimulator10.0 -simulator iphone
+language: objective-c  #1
+osx_image: xcode8.2.1 #2
+xcode_project: Iris.xcodeproj #3
+xcode_scheme: Iris #4
+xcode_sdk: iphonesimulator10.0 #5
