--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: objective-c  #1
 osx_image: xcode8.2 #2
 xcode_project: Iris.xcodeproj #3
 xcode_scheme: Iris #4
-xcode_sdk: iphonesimulator10.2 #5
+xcode_sdk: iphonesimulator10.2 
