--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c  #1
 osx_image: xcode8.2 #2
 xcode_project: Iris.xcodeproj #3
-xcode_scheme: Iris #4
-xcode_sdk: iphonesimulator10.2 
+xcode_scheme: IrisTests #4
+xcode_sdk: iphonesimulator10.1 
