Swift 2.3 to 3.0 covert

--- a/Iris/Info.plist
+++ b/Iris/Info.plist
@@ -2,8 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Iris would like to access your photos to analyze text-based images.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Iris would like to use your camera to analyze text. </string>
+	<string>Iris will use your camera to take text-based images to analyze.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
