--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-language: swift  #1
-osx_image: xcode8.2, xcode8.3 #2
-xcode_project: Iris.xcodeproj #3
-xcode_scheme: IrisTests #4
+language: swift  
+osx_image:
+   -  xcode8.2
+   -  xcode8.3 
+xcode_project: Iris.xcodeproj 
+xcode_scheme: IrisTests 
 xcode_sdk: iphonesimulator10.1 
