--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: swift  
-osx_image: xcode8.3 
+matrix:
+  include:
+    - osx_image: xcode8.2
+    - osx_image: xcode8.3 
 xcode_project: Iris.xcodeproj 
 xcode_scheme: IrisTests 
 xcode_sdk: iphonesimulator10.1 
