--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: swift  
 matrix:
   include:
+    - osx_image: xcode9
     - osx_image: xcode8.2
     - osx_image: xcode8.3
     - osx_image: xcode8.1
